# two048

./: README.md  README.rst  pyproject.toml  setup.cfg
docs/source/: api.rst  conf.py  index.rst
src/two048/: __init__.py  main.py
two048/: main.py
