[metadata]
name = two048
description = Simply play connect 4.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/AiroPi/two048
author = airo.pi_
license = MIT
license_files = LICENSE
version = attr: two048.__version__
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    two048
python_requires = >=3.10
package_dir =
    = src

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.25.0
    pytest>=7.1.2
    mypy>=0.950
    autopep8>=1.6.0

[options.package_data]
connect4 = py.typed

[flake8]
max-line-length = 160